Fixed white space under navbar

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,7 +4,7 @@
 /* Padding below the footer and lighter body text */
 
 body {
-	padding-top: 60px;
+	padding-top: 50px;
 }
 
 ul {
